--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "compile" "node server -c"
+    "compile": "node server -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kevin Tan",
